<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_battery_log"
            android:title="@string/sprd_battery_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_doze_log"
            android:title="@string/sprd_doze_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_display_log"
            android:title="@string/sprd_display_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_power_guru_log"
            android:title="@string/sprd_power_guru_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_power_hint_log"
            android:title="@string/sprd_power_hint_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_wakelock_log"
            android:title="@string/sprd_wakelock_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:enabled="true"
            android:key="sprd_power_controller_log"
            android:title="@string/sprd_power_controller_log" >
        </com.sprd.engineermode.EMSwitchPreference>
</PreferenceScreen>