<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference
        android:key="gcf"
        android:title="@string/gcf" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.gcf.GcfActivity"
            android:targetPackage="com.sprd.engineermode" />
    </Preference>
    <Preference
        android:key="iot"
        android:title="@string/iot_activity_two" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.gcf.IotActivity"
            android:targetPackage="com.sprd.engineermode" />
    </Preference>
    <Preference
        android:key="operator"
        android:title="@string/operator" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.gcf.OperatorActivity"
            android:targetPackage="com.sprd.engineermode" />
    </Preference>
    <Preference
        android:key="current_mode"
        android:summary="@string/mode_set"
        android:title="@string/current_mode" >
    </Preference>
</PreferenceScreen>