<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <Preference
        android:key="lte"
        android:title="@string/ue_cap_4g" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.telephony.UeCapLteActivity"
            android:targetPackage="com.sprd.engineermode" />
     </Preference>
     <Preference
        android:key="wcdma"
        android:title="@string/ue_cap_3g" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.telephony.UeCapWcdmaActivity"
            android:targetPackage="com.sprd.engineermode" />
     </Preference>
     <Preference
        android:key="gsm"
        android:title="@string/ue_cap_2g" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.telephony.UeCapGsmActivity"
            android:targetPackage="com.sprd.engineermode" />
     </Preference>
     <!--<SwitchPreference
        android:key="ipv6"
        android:title="@string/ue_cap_ipv6" >
     </SwitchPreference>-->
</PreferenceScreen>
